syntax = "proto3";
package mono.git;
option  go_package = "go.f110.dev/mono/go/pkg/git";

service GitData {
  rpc ListRepositories(RequestListRepositories) returns (ResponseListRepositories);
  rpc ListReferences(RequestListReferences) returns (ResponseListReferences);
  rpc GetCommit(RequestGetCommit) returns (ResponseGetCommit);
  rpc GetTree(RequestGetTree) returns (ResponseGetTree);
  rpc GetBlob(RequestGetBlob) returns (ResponseGetBlob);
}

message Reference {
  string name   = 1;
  string target = 2;
  string hash   = 3;
}

message TreeEntry {
  string path = 1;
  string mode = 2;
  string sha  = 3;
  int64  size = 4;
}

message Commit {
  string          sha       = 1;
  Signature       author    = 2;
  Signature       committer = 3;
  string          tree      = 4;
  string          message   = 5;
  repeated string parents   = 6;
}

message Signature {
  string name  = 1;
  string email = 2;
}

message RequestListRepositories {}

message ResponseListRepositories {
  repeated string repositories = 1;
}

message RequestListReferences {
  string repo = 1;
}

message ResponseListReferences {
  repeated Reference refs = 1;
}

message RequestGetCommit {
  string repo = 1;
  string sha  = 2;
}

message ResponseGetCommit {
  Commit commit = 1;
}

message RequestGetTree {
  string repo = 1;
  // sha is a commit hash, not a tree hash.
  string sha = 2;
}

message ResponseGetTree {
  string             sha  = 1;
  repeated TreeEntry tree = 2;
}

message RequestGetBlob {
  string repo = 1;
  string sha  = 2;
}

message ResponseGetBlob {
  string sha     = 1;
  int64  size    = 2;
  bytes  content = 3;
}
